log/build_2025-12-24_01-19-46/traffic_light_robot/stderr.log
  File "/home/raspb/Desktop/TrafficSenseAI/install/traffic_light_robot/lib/python3.10/site-packages/traffic_light_robot/visualizer_node.py", line 355
    ax2.set_xlabel('Time (seconds)', fontsize=12, fontweight='bold')tweight='bold')
                                                                                  ^
SyntaxError: unmatched ')'

